--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://www.hugobricks.preview.usecue.com
+baseURL: https://beatrice-portelli.github.io/eqai-hugobricks
 theme: hugobricks
 defaultContentLanguage: en
 assetDir: static
