remove nl language and customize theme

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,5 @@
-baseURL: https://beatrice-portelli.github.io/eqai-hugobricks
+# baseURL: "https://beatrice-portelli.github.io/eqai-hugobricks"
+baseURL: "/"
 relativeURLs: true 
 theme: hugobricks
 defaultContentLanguage: en
@@ -34,17 +35,3 @@ languages:
         posts: /blog/
         services: /services/
         products: /webshop/
-  nl:
-    languageName: Nederlands
-    contentDir: content/nl
-    weight: 2
-    disabled: false
-    permalinks:
-      page:
-        posts: /blog/:slug
-        services: /diensten/:slug
-        products: /winkel/:slug
-      section:
-        posts: /blog/
-        services: /diensten/
-        products: /winkel/
