--- a/data/en/general.yaml
+++ b/data/en/general.yaml
@@ -1,5 +1,5 @@
-title: Hugobricks
-description: Hugobricks is a free website theme for Hugo. It makes building Hugo websites child’s play due to its stackable (LEGO-like) content bricks.
+title: "EQAI"
+description: "Official website for EQAI - the European Summer School on Quantum AI"
 contact:
-  phone: +31 618 51 89 28
-  email: joost@vdschee.nl
+  phone: 
+  email: 
