--- a/data/settings.yaml
+++ b/data/settings.yaml
@@ -1,13 +1,13 @@
-favicon_image: /uploads/branding/brick_icon2_bw.svg
-color_name:
+favicon_image: /uploads/branding/EQAI-2025-logo.png
+color_name: eqai-blue
 sticky_header: true
 dark_header: false
 dark_footer: true
 customcursor: false
-intersectionobserver: true
+intersectionobserver: false # set to true to have sections appear (fading) as you scroll the page
 filter_has_numbers: true
 page_size: 3
 show_all_services: true
 preheader: 
   active: true
-  is_light: true
+  is_light: false
