fix breadcrumb urls and show past editions menu on mobile

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://beatrice-portelli.github.io/eqai-hugobricks"
+baseURL: "https://beatrice-portelli.github.io/eqai-hugobricks/"
 # baseURL: "/"
 relativeURLs: true 
 theme: hugobricks
